comments: fixed line-height so some letters are not cut off

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -62,13 +62,18 @@ pre .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 
 .sourcecode {
-  line-height: 1rem;
+  line-height: normal;
+}
+
+.sourcecode td {
+  padding: 0px;
 }
 
 .sourcecode tr td:first-of-type {
   text-align: right;
   color: #7e7e7e;
   user-select: none;
+  font-size: 87.5%
 }
 
 .sourcecode td {
